k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finscheduler-app
spec:
  rules:
    - host: www.finscheduler.local
      http:
        paths:
          - path: /collect
            pathType: Prefix
            backend:
              service:
                name: alloy-logs
                port:
                  number: 12347
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: finscheduler-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finscheduler-web
                port:
                  number: 80
